fix image stretching issue

--- a/style.css
+++ b/style.css
@@ -104,7 +104,6 @@ body {
     right: 10%;
     top: 120px;
     width: 40%;
-    height: 60%;
     box-shadow: 0px 5px 5px black;
 }
 
